changed background image and improved text visibility

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>NYC Stargazers</title>
 </head>
 <body>
+    <div class="cover">
     <h1>NYC Stargazers</h1>
     <h3>NASA's Picture of the Day:</h3>
     <span>(Today's Date)</span>
@@ -19,8 +20,10 @@
     <div class="photo-container">
     <img class="today-image" src="" alt="Today's picture">
     <!--<p class="description">Description:</p>-->
-   
+   <div class="description-background">
     <p class="description-text"></p>
+    </div>
+
     </div>
     <p class="instruction">Want to see more? Choose a past date to see more cool photos from NASA!</p>
     <div class="input-box">
@@ -36,11 +39,12 @@
     <!--iframe here-->
     <iframe src="" ></iframe>
     <!--<p class="description">Description:</p>-->
-   
+   <div class="description-background">
     <p class="description-text2"></p>
-    
     </div>
-
+    </div>
+    </div>
+>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
