changed styling for better appearance, will revamp entire layout

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <title>NYC Stargazers</title>
 </head>
 <body>
-    <div class="cover">
-    <h1>NYC Stargazers</h1>
-    <h3>NASA's Picture of the Day:</h3>
-    <span>(Today's Date)</span>
+    <div class="title-box">
+        <h1>Go Beyond &emsp; NYC Stargazers</h1>
+            </div>
+    <div class="cover">   
+    <h3>NASA APOD</h3>
+   
     <p class="title1"></p>
+    <span>(Today's Date)</span>
     <div class="photo-container">
     <img class="today-image" src="" alt="Today's picture">
     <!--<p class="description">Description:</p>-->
