changed background photo, added styles to input and button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="title-box">
         <h1>Go Beyond &emsp; NYC Stargazers</h1>
             </div>
-    <div class="cover">   
+   <!--<div class="cover">   -->
     <h3>NASA APOD</h3>
    
     <p class="title1"></p>
